--- a/overlays/main.html
+++ b/overlays/main.html
@@ -321,6 +321,8 @@
         
         socket.on('connect', () => {
             console.log('Connected to CardCast server');
+            // Register as overlay client
+            socket.emit('register-overlay', 'main');
         });
     </script>
 </body>
