--- a/overlays/prizes.html
+++ b/overlays/prizes.html
@@ -317,6 +317,8 @@
         
         socket.on('connect', () => {
             console.log('Connected to CardCast server');
+            // Register as overlay client
+            socket.emit('register-overlay', 'prizes');
         });
     </script>
 </body>
