--- a/index.html
+++ b/index.html
@@ -275,9 +275,15 @@
         }
     </style>
 </head>
-<body class="min-h-screen bg-base-100">
+<body class="min-h-screen bg-gradient-to-br from-base-100 via-base-200 to-base-100">
+    <!-- Add these 4 lines right after body: -->
+    <div class="animated-bg"></div>
+    <div class="orb orb-1"></div>
+    <div class="orb orb-2"></div>
+    <div class="orb orb-3"></div>
+    
     <!-- Header -->
-    <div class="navbar bg-base-200 border-b border-base-300 fixed top-0 z-50">
+    <div class="navbar glass-card border-b-0 fixed top-0 z-50">
         <div class="navbar-start">
             <div class="text-xl font-bold">
                 <span class="text-primary">Card</span><span>Cast</span>
